--- a/.env.default
+++ b/.env.default
@@ -10,3 +10,5 @@ DB_PASSWORD=your_database_password
 POSTGRES_USER=your_database_user
 POSTGRES_PASSWORD=your_database_password
 POSTGRES_DB=your_database_name
+
+BASE_URL=http://localhost:8080
