--- a/.env.default
+++ b/.env.default
@@ -2,13 +2,13 @@ LOOKUP_API_KEY=some_key
 KTOR_DEVELOPMENT=true
 
 # Variables para la aplicación
-DB_URL=jdbc:postgresql://db:5432/your_database_name
-DB_USER=your_database_user
-DB_PASSWORD=your_database_password
+DB_URL=jdbc:postgresql://db:5432/CSGO
+DB_USER=postgres
+DB_PASSWORD=password
 
 # Variables para el contenedor de PostgreSQL
-POSTGRES_USER=your_database_user
-POSTGRES_PASSWORD=your_database_password
-POSTGRES_DB=your_database_name
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=CSGO
 
 BASE_URL=http://localhost:8080
